--- a/DesignPatterns/DesignPatterns/Chapter1_Strategy.csproj
+++ b/DesignPatterns/DesignPatterns/Chapter1_Strategy.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Entry.cs" />
     <Compile Include="IFlyBehaviour.cs" />
     <Compile Include="IQuackBehaviour.cs" />
+    <Compile Include="ModelDuck.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
